--- a/_dev/ejs/index.ejs
+++ b/_dev/ejs/index.ejs
@@ -18,7 +18,7 @@
     <div class="inner">
       <span class="border">お試しモニター募集中！</span>
       <h2>クレンジングバームですっぴん美人♡<br>ゴワゴワ乾燥肌からつっぱらないもちもち肌に！</h2>
-      <p>毎日スキンケアをしていても、なんだか化粧ノリがぱっとしない…そんなお悩みはメイクの汚れが原因の場合も…。溜まった汚れや皮脂をしっかり洗い落とし、さらにはりのある肌に♡<br>両方を実感できる大人気のクレンジングバーム！今ならお手軽に試せます！</p>
+      <p>毎日スキンケアをしていても、なんだか化粧ノリがぱっとしない…そんなお悩みはメイクの汚れが<br>原因の場合も…。溜まった汚れや皮脂をしっかり洗い落とし、さらにはりのある肌に♡<br>両方を実感できる大人気のクレンジングバーム！今ならお手軽に試せます！</p>
     </div>
   </div>
 
@@ -30,7 +30,7 @@
           <p class="sp_view"><img src="./assets/images/sp_lnav_img_01.png" alt=""></p>
           <div class="link-btn">
             <a href="#">
-              今すぐモニターになる♪
+              <img src="./assets/images/lnav_img_02.png" alt="今すぐお得に試す！">
             </a>
           </div>
         </div>
