--- a/htdocs/assets/css/style.css
+++ b/htdocs/assets/css/style.css
@@ -234,12 +234,11 @@ img {
 
 .container .aside_content .course .link-btn {
   width: 94%;
-  margin: 0 auto 8px;
+  margin: -36% auto 0;
 }
 
 .container .aside_content .course .link-btn a {
   display: block;
-  background: #ff4c00;
   color: #fff;
   font-size: 17px;
   text-align: center;
@@ -253,8 +252,14 @@ img {
 .container #form_landing {
   width: 640px;
   margin: 30px auto;
+  font-size: 13px;
+  line-height: 1.3em;
   background-color: #ffffff;
   text-align: left;
+}
+
+.container #form_landing p {
+  margin-bottom: 0;
 }
 
 .container h2#form_checkout_title {
@@ -486,7 +491,7 @@ img {
     width: 80%;
     height: auto;
     margin: 0 auto;
-    padding: 30px 0 30px 400px;
+    padding: 30px 0 30px 350px;
     background: url(../images/main_img_00.png) no-repeat left center;
     background-size: contain;
     color: #e9585d;
@@ -510,60 +515,192 @@ img {
   }
   .container {
     width: 90%;
+    /* フォームタイトル */
+    /* お支払い方法タイトル */
+    /* 数量選択 */
+    /* 申し込むフォーム */
+    /*個別変更*/
+    /* 申し込むフォーム同意 */
+    /* 申し込むフォームボタン */
   }
   .container img {
     width: 100%;
   }
-  .container #teiki1 {
+  .container #form_landing {
     width: 100%;
-    margin: 0 auto;
-    font-size: 14px;
+    margin: 15px auto;
+    background-color: #ffffff;
     text-align: left;
   }
-  .container .form_ttl {
-    margin: 25px 0 0px;
+  .container h2#form_checkout_title {
+    background-color: #f6dbdb;
+    border-left: 5px solid #a0131a;
+    color: #fffff;
     font-weight: bold;
-    color: #fff;
-    font-size: 17px;
-    text-align: left;
-    padding: 8px;
+    font-size: 16px;
+    padding: 8px 8px 8px 15px;
+    margin: 0 0 15px;
   }
-  .container #itemselect, .container .mgnt20, .container .mgnt10 {
+  .container h2#form_payment_title {
+    background-color: #f6dbdb;
+    border-left: 5px solid #a0131a;
+    color: #fffff;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 8px 8px 8px 15px;
+    margin: 40px 0 0 0;
+  }
+  .container table#product_qty {
     width: 100%;
+    height: 100px;
+    border-collapse: collapse;
+    border: 1px solid #C3C3C3;
+    margin: 0 0 30px;
   }
-  .container #teiki1 th {
-    padding: 12px 2% 12px 2%;
-    width: 28%;
-    vertical-align: top;
+  .container #product_qty tr {
+    border-bottom: 1px solid #C3C3C3;
+    line-height: 18px;
+    text-align: left;
   }
-  .container #teiki1 td {
-    vertical-align: top;
-    padding: 12px 2% 12px 2%;
-    color: #222;
-    width: 64%;
+  .container #product_qty th {
+    padding: 5px;
+    border-right: 1px solid #C3C3C3;
+    background-color: #eeeeee;
   }
-  .container #teiki1 td span {
+  .container #product_qty td {
+    padding: 5px;
+    width: 50%;
+  }
+  .container #form_checkout_message {
+    width: 100%;
+    text-align: left;
+  }
+  .container #landing_form {
+    width: 100%;
+    border-top: 1px solid #C3C3C3;
+    border-left: 1px solid #C3C3C3;
+    border-right: 1px solid #C3C3C3;
+    border-bottom: none;
+  }
+  .container .form_box {
     display: block;
+    border-bottom: 1px solid #C3C3C3;
   }
-  .container #teiki1 td span.small_txt {
+  .container .form_box_label {
+    width: 100%;
+    padding: 10px 5px;
+    border-right: none;
+    background-color: #eeeeee;
+    box-sizing: border-box;
+  }
+  .container .form_box_label span.form_required {
+    margin: 0 0 0 5px;
+  }
+  .container .form_input_box {
+    padding: 8px 5px;
+    border-bottom: 1px solid #c3c3c3;
+  }
+  .container .form_example {
+    padding: 8px 5px;
+  }
+  .container .form_input_box p {
+    display: inline;
+  }
+  .container .form_input_box input, .container .form_input_box select {
+    display: inline;
+    border: 1px solid #c3c3c3;
+  }
+  .container .form_example p {
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 10px;
+  }
+  .container .ureru_efo_family_name,
+  .container .ureru_efo_given_name,
+  .container .ureru_efo_family_kana,
+  .container .ureru_efo_given_kana {
+    width: 9em;
+  }
+  .container .form_input_box p.form_cap {
     font-size: 12px;
   }
-  .container #teiki1 td textarea {
-    width: 90%;
-    border: 1px solid #ccc;
+  .container .credit_box {
+    display: -webkit-flexbox;
+    display: -moz-flexbox;
+    display: -ms-flexbox;
+    display: -o-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-flow: column wrap;
+        flex-flow: column wrap;
   }
-  .container #itemselect, .container .mgnt20, .container .mgnt10 {
-    margin-bottom: 25px;
+  .container .credit_title {
+    font-weight: bold;
+    margin: 0 5px 0 0;
   }
-  .container .hissu {
-    font-size: 12px;
-    float: right;
-    margin-right: 5px;
-    padding: 2px 3px;
+  .container #form_payment_method_select {
+    margin: 10px 10px 10px 10px;
+    padding-left: 5px;
   }
-  .container .submit-btn img {
-    width: 100px;
-    height: 25px;
+  .container input.tel_no {
+    width: 4em;
+  }
+  .container input#OrderBirthdayYear {
+    width: 4em;
+  }
+  .container input.zip1 {
+    width: 3em;
+  }
+  .container input.zip2 {
+    width: 4em;
+  }
+  .container input.email {
+    width: 14em;
+  }
+  .container span.form_required {
+    color: #a0131a;
+  }
+  .container #OrderSex1 {
+    margin: 0 0 0 10px;
+  }
+  .container #form_payment_method_credit_form table tr th {
+    text-align: left;
+  }
+  .container #agreement {
+    clear: both;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #EEEEEE;
+  }
+  .container #agreement .form_notice {
+    color: #a0131a;
+    font-weight: bold;
+  }
+  .container input#form_btn {
+    background: url(../images/btn-lp-off.gif) no-repeat 0 0;
+    background-size: 100% auto;
+    width: 60%;
+    height: 0;
+    padding-top: 17.18%;
+    border: none;
+    text-indent: -9999px;
+    display: block;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+  .container .error-message {
+    color: #cc0000;
+  }
+  .container #confirm_button_disable {
+    margin: 0 auto;
+    text-align: center;
+    width: 640px;
+  }
+  .container #confirm_button_disable img {
+    width: 370px;
+    height: auto;
   }
 }
 
@@ -587,7 +724,7 @@ img {
     background: none;
   }
   .main_area .inner h2 {
-    font-size: 18px;
+    font-size: 17px;
   }
   .main_area .inner p {
     font-size: 12px;
@@ -606,6 +743,13 @@ img {
     width: 94%;
     margin: 0 auto;
     font-size: 12px;
+    /* フォームタイトル */
+    /* お支払い方法タイトル */
+    /* 数量選択 */
+    /* 申し込むフォーム */
+    /*個別変更*/
+    /* 申し込むフォーム同意 */
+    /* 申し込むフォームボタン */
   }
   .container .main_content section {
     margin-bottom: 30px;
@@ -675,6 +819,183 @@ img {
     font-weight: bold;
     display: block;
   }
+  .container .main_content #form_landing {
+    width: 100%;
+    margin: 15px auto;
+    background-color: #ffffff;
+    text-align: left;
+  }
+  .container .main_content h2#form_checkout_title {
+    background-color: #f6dbdb;
+    border-left: 5px solid #a0131a;
+    color: #fffff;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 8px 8px 8px 15px;
+    margin: 0 0 15px;
+  }
+  .container .main_content h2#form_payment_title {
+    background-color: #f6dbdb;
+    border-left: 5px solid #a0131a;
+    color: #fffff;
+    font-weight: bold;
+    font-size: 16px;
+    padding: 8px 8px 8px 15px;
+    margin: 40px 0 0 0;
+  }
+  .container .main_content table#product_qty {
+    width: 100%;
+    height: 100px;
+    border-collapse: collapse;
+    border: 1px solid #C3C3C3;
+    margin: 0 0 30px;
+  }
+  .container .main_content #product_qty tr {
+    border-bottom: 1px solid #C3C3C3;
+    line-height: 18px;
+    text-align: left;
+  }
+  .container .main_content #product_qty th {
+    padding: 5px;
+    border-right: 1px solid #C3C3C3;
+    background-color: #eeeeee;
+  }
+  .container .main_content #product_qty td {
+    padding: 5px;
+    width: 50%;
+  }
+  .container .main_content #form_checkout_message {
+    width: 100%;
+    text-align: left;
+  }
+  .container .main_content #landing_form {
+    width: 100%;
+    border-top: 1px solid #C3C3C3;
+    border-left: 1px solid #C3C3C3;
+    border-right: 1px solid #C3C3C3;
+    border-bottom: none;
+  }
+  .container .main_content .form_box {
+    display: block;
+    border-bottom: 1px solid #C3C3C3;
+  }
+  .container .main_content .form_box_label {
+    width: 100%;
+    padding: 10px 5px;
+    border-right: none;
+    background-color: #eeeeee;
+    box-sizing: border-box;
+  }
+  .container .main_content .form_box_label span.form_required {
+    margin: 0 0 0 5px;
+  }
+  .container .main_content .form_input_box {
+    padding: 8px 5px;
+    border-bottom: 1px solid #c3c3c3;
+  }
+  .container .main_content .form_example {
+    padding: 8px 5px;
+  }
+  .container .main_content .form_input_box p {
+    display: inline;
+  }
+  .container .main_content .form_input_box input, .container .main_content .form_input_box select {
+    display: inline;
+    border: 1px solid #c3c3c3;
+  }
+  .container .main_content .form_example p {
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 10px;
+  }
+  .container .main_content .ureru_efo_family_name,
+  .container .main_content .ureru_efo_given_name,
+  .container .main_content .ureru_efo_family_kana,
+  .container .main_content .ureru_efo_given_kana {
+    width: 9em;
+  }
+  .container .main_content .form_input_box p.form_cap {
+    font-size: 12px;
+  }
+  .container .main_content .credit_box {
+    display: -webkit-flexbox;
+    display: -moz-flexbox;
+    display: -ms-flexbox;
+    display: -o-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-flow: column wrap;
+        flex-flow: column wrap;
+  }
+  .container .main_content .credit_title {
+    font-weight: bold;
+    margin: 0 5px 0 0;
+  }
+  .container .main_content #form_payment_method_select {
+    margin: 10px 10px 10px 10px;
+    padding-left: 5px;
+  }
+  .container .main_content input.tel_no {
+    width: 4em;
+  }
+  .container .main_content input#OrderBirthdayYear {
+    width: 4em;
+  }
+  .container .main_content input.zip1 {
+    width: 3em;
+  }
+  .container .main_content input.zip2 {
+    width: 4em;
+  }
+  .container .main_content input.email {
+    width: 14em;
+  }
+  .container .main_content span.form_required {
+    color: #a0131a;
+  }
+  .container .main_content #OrderSex1 {
+    margin: 0 0 0 10px;
+  }
+  .container .main_content #form_payment_method_credit_form table tr th {
+    text-align: left;
+  }
+  .container .main_content #agreement {
+    clear: both;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: #EEEEEE;
+  }
+  .container .main_content #agreement .form_notice {
+    color: #a0131a;
+    font-weight: bold;
+  }
+  .container .main_content input#form_btn {
+    background: url(../images/btn-lp-off.gif) no-repeat 0 0;
+    background-size: 100% auto;
+    width: 60%;
+    height: 0;
+    padding-top: 17.18%;
+    border: none;
+    text-indent: -9999px;
+    display: block;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+  .container .main_content .error-message {
+    color: #cc0000;
+  }
+  .container .main_content #confirm_button_disable {
+    margin: 0 auto;
+    text-align: center;
+    width: 640px;
+  }
+  .container .main_content #confirm_button_disable img {
+    width: 370px;
+    height: auto;
+  }
   .container .aside_content {
     float: none;
     width: 94%;
@@ -694,214 +1015,14 @@ img {
   }
   .container .aside_content .course .link-btn a {
     display: block;
-    background: #ff4c00;
     color: #fff;
     font-size: 17px;
     text-align: center;
-    padding: 10px 0;
   }
   .container .aside_content .course .link-btn a:hover {
     text-decoration: none;
   }
   .container .aside_content .bnr {
     margin-top: 9px;
-  }
-  #form_landing {
-    width: 640px;
-    margin: 30px auto;
-    background-color: #ffffff;
-    text-align: left;
-  }
-  /* フォームタイトル */
-  h2#form_checkout_title {
-    background-color: #f6dbdb;
-    border-left: 5px solid #a0131a;
-    color: #fffff;
-    font-weight: bold;
-    font-size: 16px;
-    padding: 8px 8px 8px 15px;
-    margin: 0 0 15px;
-  }
-  /* お支払い方法タイトル */
-  h2#form_payment_title {
-    background-color: #f6dbdb;
-    border-left: 5px solid #a0131a;
-    color: #fffff;
-    font-weight: bold;
-    font-size: 16px;
-    padding: 8px 8px 8px 15px;
-    margin: 40px 0 0 0;
-  }
-  /* 数量選択 */
-  table#product_qty {
-    width: 640px;
-    height: 100px;
-    border-collapse: collapse;
-    border: 1px solid #C3C3C3;
-    margin: 0 0 30px;
-  }
-  #product_qty tr {
-    border-bottom: 1px solid #C3C3C3;
-    line-height: 18px;
-    text-align: left;
-  }
-  #product_qty th {
-    padding: 5px;
-    border-right: 1px solid #C3C3C3;
-    background-color: #eeeeee;
-  }
-  #product_qty td {
-    padding: 5px;
-    width: 550px;
-  }
-  /* 申し込むフォーム */
-  #form_checkout_message {
-    width: 640px;
-    text-align: left;
-  }
-  #landing_form {
-    width: 638px;
-    border-top: 1px solid #C3C3C3;
-    border-left: 1px solid #C3C3C3;
-    border-right: 1px solid #C3C3C3;
-    border-bottom: none;
-  }
-  .form_box {
-    display: -webkit-flexbox;
-    display: -moz-flexbox;
-    display: -o-flexbox;
-    display: -webkit-box;
-    /*--- Androidブラウザ用 ---*/
-    display: -ms-flexbox;
-    /*--- IE10 ---*/
-    /*--- safari（PC）用 ---*/
-    display: flex;
-    -ms-flex-flow: row;
-    /*--- IE10用 ---*/
-    -webkit-flow: row;
-    /*--- safari（PC）用 ---*/
-    -ms-flex-flow: row;
-        flex-flow: row;
-    /* 縦方向中央揃え（Safari用） */
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    /* 縦方向中央揃え */
-    border-bottom: 1px solid #C3C3C3;
-  }
-  .form_box_label {
-    width: 180px;
-    padding: 20px 5px;
-    border-right: 1px solid #C3C3C3;
-    background-color: #eeeeee;
-    -ms-flex-flex-item-align: stretch;
-    /*--- IE10 ---*/
-    /*--- safari（PC）用 ---*/
-    -ms-flex-item-align: stretch;
-        align-self: stretch;
-  }
-  .form_box_label span.form_required {
-    margin: 0 0 0 5px;
-  }
-  .form_input_box {
-    padding: 15px 5px;
-  }
-  .form_input_box p,
-  .form_input_box input {
-    display: inline;
-  }
-  .form_example p {
-    width: 200px;
-    font-size: 10px;
-  }
-  /*個別変更*/
-  .ureru_efo_family_name,
-  .ureru_efo_given_name,
-  .ureru_efo_family_kana,
-  .ureru_efo_given_kana {
-    width: 9em;
-  }
-  .form_input_box p.form_cap {
-    font-size: 12px;
-  }
-  .credit_box {
-    display: -webkit-flexbox;
-    display: -moz-flexbox;
-    display: -ms-flexbox;
-    display: -o-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-flow: column wrap;
-        flex-flow: column wrap;
-  }
-  .credit_title {
-    font-weight: bold;
-    margin: 0 5px 0 0;
-  }
-  #form_payment_method_select {
-    margin: 10px 10px 10px 10px;
-    padding-left: 5px;
-  }
-  input.tel_no {
-    width: 4em;
-  }
-  input#OrderBirthdayYear {
-    width: 4em;
-  }
-  input.zip1 {
-    width: 3em;
-  }
-  input.zip2 {
-    width: 4em;
-  }
-  input.email {
-    width: 14em;
-  }
-  span.form_required {
-    color: #a0131a;
-  }
-  #OrderSex1 {
-    margin: 0 0 0 10px;
-  }
-  #form_payment_method_credit_form table tr th {
-    text-align: left;
-  }
-  /* 申し込むフォーム同意 */
-  #agreement {
-    clear: both;
-    width: 620px;
-    padding: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: #EEEEEE;
-  }
-  #agreement .form_notice {
-    color: #a0131a;
-    font-weight: bold;
-  }
-  /* 申し込むフォームボタン */
-  input#form_btn {
-    background: url(../images/btn-lp-off.gif) no-repeat 0 0;
-    background-size: 100% auto;
-    width: 60%;
-    height: 0;
-    padding-top: 17.18%;
-    border: none;
-    text-indent: -9999px;
-    display: block;
-    margin: 0 auto;
-    cursor: pointer;
-  }
-  .error-message {
-    color: #cc0000;
-  }
-  #confirm_button_disable {
-    margin: 0 auto;
-    text-align: center;
-    width: 640px;
-  }
-  #confirm_button_disable img {
-    width: 370px;
-    height: auto;
   }
 }
