SPバナー表示実装

--- a/_dev/_src/css/style.scss
+++ b/_dev/_src/css/style.scss
@@ -1118,11 +1118,11 @@ img{
             }
 
     		.course{
-    			border: 5px solid #006e1d;
+                margin-bottom: 16%;
 
     			.link-btn{
-    				width: 94%;
-    				margin: 0 auto 8px;
+    				width: 90%;
+    				margin: -28% auto 0;
 
     				a{
     					display: block;
