--- a/htdocs/assets/css/style.css
+++ b/htdocs/assets/css/style.css
@@ -1007,11 +1007,11 @@ img {
     width: 100%;
   }
   .container .aside_content .course {
-    border: 5px solid #006e1d;
+    margin-bottom: 16%;
   }
   .container .aside_content .course .link-btn {
-    width: 94%;
-    margin: 0 auto 8px;
+    width: 90%;
+    margin: -28% auto 0;
   }
   .container .aside_content .course .link-btn a {
     display: block;
